# E8-GFT

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: verify.yml
01-foundations-of-e8-gft/: README.md  _common.py  do5b_eix_log_determinant.py  e0_algebra_base.py  e1_action_form.py  e1_o5_plethysm.py  e1_open_points.py  e1_verify_hypotheses.py  e2_bec_phase.py  e3_antichain_full_sweep.py  e3_orbit_selection.py  e5_topology.py  k3b_c1_os_reflection_positivity.py  k3b_os_b_full_interacting.py  k3b_volovik_signature.py  r4_eix_v_ind_camporesi_higuchi.py  run_all.py
02-sigma-model/: _common.py  e10_b1_skyrmion_profile.py  e2_cw_potential.py  e4_p5_invariants.py  e5_topology.py  eo1_q1_sp1_holonomy.py  eo5_skyrme_schur.py  run_all.py
04-mass-predictions/: _common.py  mass_prediction_pipeline.py  run_all.py  step1_e7_rep_54modes.py  step2_twisted_dirac_am.py
05-a2-eix/: _common.py  a2_eix.py  run_all.py
06-cc-scripts/: _common.py  do5b_explicit_log_det.py  do5b_helgason_spherical_enum.py  m4c_a2_attribution.py  m4c_kappa_normalization.py  m4c_prefactor_verify.py  m4c_spectral_sum.py  run_all.py
10-cc-notes/: _common.py  cc1_f2_skyrme_bogomolny.py  cc2_f1_camporesi_higuchi.py  do5b_camporesi_higuchi_spectral_zeta.py  run_all.py
e8sim/: __init__.py  algebra.py  dirac.py  e8_constants.pt  eix.py  fields.py  generate_e8_constants.py  invariants.py  loss.py  pdg.py  roots.py
