[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "e8-gft"
version = "1.0.0"
description = "Numerical verification scripts for E₈ group field theory papers"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Lukáš Bednařík", email = "lukas@lukasbednarik.cz" },
]

dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
gpu = ["torch"]

[project.urls]
Repository = "https://github.com/lukasbednarik/E8-GFT"
DOI = "https://doi.org/10.5281/zenodo.20290480"

[tool.setuptools.packages.find]
include = ["e8sim*"]
